# apx

./: .gitignore  .prettierignore  Cargo.toml  Justfile  README.md  biome.json  build.rs  bun.lockb  deny.toml  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json  setup.sh
.claude/skills/memory/: SKILL.md
.claude/skills/memory/memories/: healthcheck-redirect-fix.md  healthcheck-rework.md  init-lazy-deps.md  logging-refactor.md
.claude/skills/rust/: SKILL.md
.cursor/skills/commiter/: SKILL.md
.cursor/skills/memory/: SKILL.md
.cursor/skills/memory/memories/: failfast-and-frontend-deps.md  init-streaming-progress.md
.githooks/: pre-commit
.github/workflows/: ci.yml  clear-caches.yml  codeql.yml  deploy-registry.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  main.rs  server.rs
crates/apx/: Cargo.toml  build.rs
crates/apx/src/: main.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: __generate_openapi.rs  build.rs  bun.rs  common.rs  feedback.rs  info.rs  init.rs  lib.rs  test_check_flow.rs  upgrade.rs
crates/cli/src/components/: add.rs
crates/cli/src/dev/: __internal_run_server.rs  apply.rs  check.rs  logs.rs  mcp.rs  mod.rs  restart.rs  start.rs  status.rs  stop.rs
crates/cli/src/flux/: mod.rs  start.rs  stop.rs
crates/cli/src/frontend/: build.rs  dev.rs  mod.rs
crates/cli/src/skill/: install.rs
crates/common/: Cargo.toml
crates/common/src/: bundles.rs  format.rs  hosts.rs  lib.rs  storage.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: agent.rs  api_generator.rs  app_state.rs  common.rs  databricks_sdk_doc.rs  dotenv.rs  download.rs  feedback.rs  frontend.rs  interop.rs  lib.rs  python_logging.rs  registry.rs  resources.rs  tracing_init.rs
crates/core/src/components/: add.rs  cache.rs  css_updater.rs  mod.rs  models.rs  tw_transform.rs  utils.rs
crates/core/src/dev/: backend.rs  client.rs  common.rs  embedded_db.rs  frontend.rs  logging.rs  mod.rs  otel.rs  process.rs  proxy.rs  server.rs  token.rs  watcher.rs
crates/core/src/flux/: mod.rs
crates/core/src/openapi/: emitter.rs  mod.rs  spec.rs
crates/core/src/openapi/ir/: api.rs  builders.rs  codegen.rs  mod.rs  normalize.rs  types.rs  utils.rs
crates/core/src/ops/: check.rs  dev.rs  healthcheck.rs  logs.rs  mod.rs  startup_logs.rs
crates/core/src/py_edit/: find.rs  mod.rs  splice.rs
crates/core/src/search/: common.rs  component_index.rs  docs_index.rs  mod.rs
crates/core/src/sources/: databricks_sdk.rs
crates/databricks_sdk/: Cargo.toml  build.rs
crates/databricks_sdk/src/: auth.rs  client.rs  config.rs  config_parser.rs  error.rs  lib.rs  useragent.rs
crates/databricks_sdk/src/api/: apps.rs  current_user.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: dev.rs  fts.rs  lib.rs  logs.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: context.rs  core.rs  indexing.rs  info_content.rs  lib.rs  resources.rs  server.rs  validation.rs
crates/mcp/src/tools/: databricks.rs  devserver.rs  docs.rs  error.rs  feedback.rs  mod.rs  openapi.rs  project.rs  registry.rs
crates/mcp/tests/: mcp_protocol.rs
crates/studio/: Cargo.toml  build.rs  components.json  index.html  package.json  tauri.conf.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
crates/studio/src/: commands.rs  main.rs  registry.rs
crates/studio/ui/: App.tsx  app.css  main.tsx
crates/studio/ui/components/: empty-state.tsx  header.tsx  project-card.tsx  project-list.tsx
crates/studio/ui/components/ui/: badge.tsx  button.tsx
crates/studio/ui/lib/: tauri.ts
docs/: .gitignore  components.json  next.config.mjs  package.json  tsconfig.json
docs/content/docs/: concepts.mdx  features.mdx  index.mdx  meta.json  workspaces.mdx
docs/content/docs/cli/: index.mdx
docs/content/docs/features/: index.mdx
docs/content/docs/mcp/: index.mdx
docs/content/docs/reference/: claude-code.mdx  cli.mdx  config-reference.mdx  mcp.mdx  meta.json
docs/public/: install.ps1  install.sh
docs/scripts/: validate.ts
docs/src/: mdx-components.tsx
docs/src/app/: global.css  layout.tsx
docs/src/app/(home)/: page.tsx
docs/src/components/: animated-terminal.tsx  apx-ecosystem-diagram.tsx  gradient-bg.tsx  search.tsx  terminal-demo.tsx
docs/src/components/icons/: fast-api.tsx  uv.tsx
docs/src/lib/: layout.shared.tsx
hooks/: hooks.json
scripts/: build_agent.py  download_protoc.py  generate_registry.py  get_binaries.py
scripts/dev/: gen.py
skills/apx/: SKILL.md  backend-patterns.md  frontend-patterns.md
src/: api_generator.rs  common.rs  databricks_sdk_doc.rs  dotenv.rs  interop.rs  lib.rs  python_logging.rs  registry.rs
src/apx/: __init__.py  __main__.py  _core.pyi  constants.py  interop.py  models.py  openapi.py  utils.py
src/apx/assets/: entrypoint.ts
src/apx/cli/: build.py  init.py  openapi.py
src/apx/mcp/: __init__.py  common.py  models.py  sdk.py  sdk_parser.py  server.py
src/cli/: __generate_openapi.rs  build.rs  bun.rs  common.rs  init.rs  mod.rs
src/cli/components/: add.rs  cache.rs  css_updater.rs  mod.rs  models.rs  tw_transform.rs  utils.rs
src/cli/dev/: __internal_run_server.rs  apply.rs  check.rs  logs.rs  mcp.rs  mod.rs  restart.rs  start.rs  startup_logs.rs  status.rs  stop.rs
src/cli/flux/: __run.rs  mod.rs  start.rs  stop.rs
src/cli/frontend/: build.rs  common.rs  dev.rs  mod.rs
src/dev/: client.rs  common.rs  logging.rs  otel.rs  process.rs  proxy.rs  server.rs
src/flux/: mod.rs  server.rs  storage.rs
src/mcp/: core.rs  mod.rs  server.rs
src/openapi/: emitter.rs  mod.rs  spec.rs
src/openapi/ir/: api.rs  codegen.rs  emit.rs  mod.rs  normalize.rs  types.rs  utils.rs
src/search/: common.rs  component_index.rs  docs_index.rs  mod.rs
src/sources/: databricks_sdk.rs  mod.rs
templates/: package_index.html.jinja2  root_index.html.jinja2
tests/: conftest.py  init_integration.rs  test_apply.py  test_bun_binaries.py  test_clean_start.py  test_components.py  test_db.py  test_dev.py  test_init.py  test_mcp.py  test_openapi.py  test_sdk_rst.py  test_sdk_usage_instructions.py
(+47 files in other folders)
