[workspace]
members = [".", "crates/common", "crates/agent", "crates/studio", "crates/core", "crates/mcp", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
# Internal crates
apx-common = { path = "crates/common" }
apx-agent = { path = "crates/agent" }
apx-core = { path = "crates/core" }
apx-mcp = { path = "crates/mcp" }
apx-cli = { path = "crates/cli" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "0.8.20"
toml_edit = "0.24.0"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "process", "io-util", "signal", "io-std", "net"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3.31"

# Web server
axum = { version = "0.8.8", features = ["ws"] }
reqwest = { version = "0.13.1", features = ["blocking", "json", "stream"] }
tokio-tungstenite = { version = "0.28", features = ["connect", "handshake", "stream", "rustls-tls-webpki-roots"] }

# OpenTelemetry
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.29", features = ["http-json", "logs"] }
opentelemetry-appender-tracing = "0.29"
opentelemetry-proto = "0.31.0"
prost = "0.14.3"

# Logging/tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.9"

# Utilities
chrono = "0.4"
dirs = "5.0"
hex = "0.4"
rand = "0.8.5"
walkdir = "2.5.0"
url = "2.5.8"
zip = "2.2"
rayon = "1.11.0"
similar = "2.7"

# Python interop
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py39"] }

# System
sysinfo = "0.33.1"
notify = "8.2.0"

# Templating
tera = "1.20.0"

# Database clients
tokio-postgres = { version = "0.7.16", features = ["runtime"] }

# Data processing
lancedb = { version = "0.23.1", default-features = false }
arrow = "56.2.0"
lance-index = "1.0.1"

# Code parsing
biome_css_parser = "0.5.8"
biome_css_syntax = "0.5.8"
biome_rowan = "0.5.8"
schemars = "1.2.0"

# Temporary files
tempfile = "3.15"

[package]
name = "apx"
version = "0.2.7"
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[dependencies]
apx-core.workspace = true
apx-cli.workspace = true
pyo3.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
