[package]
name = "apx-agent"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "apx-agent"
path = "src/main.rs"

[dependencies]
apx-common.workspace = true
apx-db.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
chrono.workspace = true
