[package]
name = "apx-bin"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "apx"
path = "src/main.rs"

[dependencies]
apx-cli.workspace = true
apx-core.workspace = true
