[package]
name = "apx-cli"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
apx-common = { path = "../common" , version = "0.3.1" }
apx-core = { path = "../core" , version = "0.3.1" }
apx-db.workspace = true
apx-databricks-sdk = { path = "../databricks_sdk" , version = "0.3.1" }
apx-mcp = { path = "../mcp" , version = "0.3.1" }
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
tera.workspace = true
walkdir.workspace = true
similar.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
reqwest.workspace = true
toml.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true
