[package]
name = "apx-core"
version = "0.3.0-rc1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
apx-common.workspace = true
apx-agent.workspace = true
apx-databricks-sdk.workspace = true
dirs.workspace = true
indicatif.workspace = true
toml.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
chrono.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
sysinfo.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-proto.workspace = true
prost.workspace = true
notify.workspace = true
tokio-tungstenite.workspace = true
tokio-postgres.workspace = true
schemars.workspace = true
biome_css_parser.workspace = true
biome_css_syntax.workspace = true
biome_rowan.workspace = true
url.workspace = true
zip.workspace = true
rayon.workspace = true
hex.workspace = true
apx-db.workspace = true
sqlx.workspace = true
similar.workspace = true
tempfile.workspace = true
rand.workspace = true
serde_with = { version = "3.16.1", default-features = false, features = ["macros"] }
which.workspace = true
flate2.workspace = true
tar.workspace = true
sha2.workspace = true

[build-dependencies]
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
