[package]
name = "apx-databricks-sdk"
version = "0.3.0-rc5"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
thiserror.workspace = true
