[package]
name = "apx-databricks-sdk"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
futures-util.workspace = true
