[package]
name = "apx-db"
version = "0.3.0-rc4"
edition.workspace = true
rust-version.workspace = true

[dependencies]
apx-common.workspace = true
sqlx.workspace = true
dirs.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
