[package]
name = "apx-mcp"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true

[dependencies]
apx-common.workspace = true
apx-core = { path = "../core" , version = "0.3.6" }
apx-databricks-sdk.workspace = true
apx-db.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
schemars.workspace = true
rmcp.workspace = true

[dev-dependencies]
apx-cli = { path = "../cli", version = "0.3.6" }
apx-core = { path = "../core", version = "0.3.6" }
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars", "client"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
