[package]
name = "apx-studio"
version = "0.3.4"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "apx-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
toml.workspace = true
dirs.workspace = true
